# Manipulator-Control

./: .gitignore
ArmManipulateAlgorithm/GA_PSO/src/: CMakeLists.txt  main.cpp
ArmManipulateAlgorithm/GA_PSO/src/GeneticAlgorithm/: Chromosome.cpp  Chromosome.h  ChromosomeFactory.cpp  ChromosomeFactory.h  MainProcess.cpp  MainProcess.h  Multithreading.cpp  Population.cpp  Population.h  PopulationFactory.cpp
ArmManipulateAlgorithm/UI/Arm/FireDetect/: FireDetect.pro  FireDetectClient.cpp  FireDetectClient.h
ArmManipulateAlgorithm/UI/Arm/Pointer/: Object.cpp  Pointer.h  SmartPointer.h
ArmManipulateAlgorithm/UI/Arm/networkHandle/: MqttHandle.cpp  MqttHandle.h
ArmManipulateAlgorithm/UI/PC/: CONST.py  ServerMonitor.py
ArmManipulateAlgorithm/UI/PC/config/: mqtt.conf
ArmManipulateAlgorithm/UI/PC/handler/: config_handler.py
ArmManipulateAlgorithm/UI/PC/log/: loginfo.log.2022-03-08  loginfo.log.2022-03-19  loginfo.log.2022-03-20  loginfo.log.2022-03-21  loginfo.log.2022-03-25  loginfo.log.2022-03-26  loginfo.log.2022-04-05  (+11 more)
ArmManipulateAlgorithm/mechanicalArmOp/inc/: DH_MechanicalArm.h  MechanicalArm.h  TransferMatrix.h
ArmManipulateAlgorithm/mechanicalArmOp/src/: TransferMatrix.cpp  main.cpp
Jibot1-32/: FlyMcuConfig.ini  Thumbs.db
Jibot1-32/Project/: Jibot1-32.uvgui.Administrator  Jibot1-32.uvgui.TB  Jibot1-32.uvgui.TechMan  Jibot1-32.uvgui.ZL-JQ  Jibot1-32.uvgui.ZL-W  Jibot1-32.uvgui_TB.bak  Jibot1-32.uvgui_TechMan.bak  Jibot1-32.uvgui_ZL-JQ.bak  Jibot1-32.uvopt  Jibot1-32.uvproj
Jibot1-32/USER/: main.c  main.h  stm32f10x_it.c
Jibot1-32/src/: z_main.c  z_main.h  z_stm32f10x_it.c  z_timer.c  z_w25q64.c
PC/: MyPlot.py  MyPlotBak.py
PC/handler/: global_logger.py
PC/log/: loginfo.log.2022-04-22  loginfo.log.2022-12-27
StereoCalib/computer-vision/: CMakeLists.txt  README.md  camera1&camera2.xml  camera1&camera3.xml  camera1.xml  camera2.xml  camera3.xml  recordProcessing.cpp  test.cpp  testCpp.cpp
StereoCalib/computer-vision/calibration/: calibration.cpp  stereoCalibration.cpp
StereoCalib/computer-vision/capture/: recordVideo.cpp  takePhotoDouble.cpp  takePhotoDoubleAfter.cpp  takePhotoSingle.cpp
StereoCalib/computer-vision/include/: DoubleCameraOpt.h  SingleCameraOpt.h
StereoCalib/computer-vision/samples/: calibration.cpp  getDistance.cpp  match.cpp  stereo_calib.cpp
StereoCalib/computer-vision/src/: DoubleCameraOpt.cpp  SingleCameraOpt.cpp
StereoCalib/stereo_calib/: CMakeLists.txt  README.md  calib.cpp  extrinsics.yml  getDistance.cpp  getImages.cpp  testAccuracy.cpp  use.cpp
StereoCalib/stereo_calib/binocularCamera/: CMakeLists.txt  binocularCamera.cpp  binocularCamera.h  intrinsics.yml  main.cpp  triangulate.cpp
(+38 files in other folders)
